<resources>
    <string name="app_name">Chatapp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="back_to_registration">No account yet? Back to registration</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_an_account">Already an account?</string>
    <string name="select_photo">Select Photo</string>
    <string name="field_not_empty">Email or Password field may not be empty</string>
    <string name="failed_create_user">Failed to create user: </string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="select_user">Select User</string>
    <string name="send">Send</string>
</resources>